docs/api/0.2.1/ironwood/ds/UnmodifiableList.md
<!-- Generated by IronDocs. Do not edit. -->

![IronDocs API reference](../../assets/irondocs.svg)

**Version 0\.2\.1**

[All packages](../../README.md) / [`ironwood.ds`](package-summary.md)

# UnmodifiableList

**Class** · `ironwood.ds.UnmodifiableList`

```java
public final class UnmodifiableList<E extends Object> implements Iterable<E>
```

**Implements:** [`Iterable<E>`](../lang/Iterable.md)

A read-only view of an [`ArrayList`](ArrayList.md). Changes made through the backing
list remain visible through this view.


## Member summary

[Methods](#methods)

| Member | Description |
| --- | --- |
| [`size()`](#member-size-28--29-) |  |
| [`isEmpty()`](#member-isEmpty-28--29-) |  |
| [`contains(E)`](#member-contains-28-E-29-) |  |
| [`get(int)`](#member-get-28-int-29-) |  |
| [`indexOf(E)`](#member-indexOf-28-E-29-) |  |
| [`lastIndexOf(E)`](#member-lastIndexOf-28-E-29-) |  |
| [`set(int,E)`](#member-set-28-int-2c-E-29-) |  |
| [`add(E)`](#member-add-28-E-29-) |  |
| [`clear()`](#member-clear-28--29-) |  |
| [`remove(int)`](#member-remove-28-int-29-) |  |
| [`remove(E)`](#member-remove-28-E-29-) |  |
| [`iterator()`](#member-iterator-28--29-) |  |

## Methods

<a name="member-size-28--29-"></a>

### `size()`

```java
public int size()
```


[Back to member summary](#member-summary)

<a name="member-isEmpty-28--29-"></a>

### `isEmpty()`

```java
public boolean isEmpty()
```


[Back to member summary](#member-summary)

<a name="member-contains-28-E-29-"></a>

### `contains(E)`

```java
public boolean contains(E element)
```


[Back to member summary](#member-summary)

<a name="member-get-28-int-29-"></a>

### `get(int)`

```java
public E get(int index)
```


[Back to member summary](#member-summary)

<a name="member-indexOf-28-E-29-"></a>

### `indexOf(E)`

```java
public int indexOf(E element)
```


[Back to member summary](#member-summary)

<a name="member-lastIndexOf-28-E-29-"></a>

### `lastIndexOf(E)`

```java
public int lastIndexOf(E element)
```


[Back to member summary](#member-summary)

<a name="member-set-28-int-2c-E-29-"></a>

### `set(int,E)`

```java
public E set(int index, E element)
```


[Back to member summary](#member-summary)

<a name="member-add-28-E-29-"></a>

### `add(E)`

```java
public void add(E element)
```


[Back to member summary](#member-summary)

<a name="member-clear-28--29-"></a>

### `clear()`

```java
public void clear()
```


[Back to member summary](#member-summary)

<a name="member-remove-28-int-29-"></a>

### `remove(int)`

```java
public E remove(int index)
```


[Back to member summary](#member-summary)

<a name="member-remove-28-E-29-"></a>

### `remove(E)`

```java
public boolean remove(E element)
```


[Back to member summary](#member-summary)

<a name="member-iterator-28--29-"></a>

### `iterator()`

```java
@Override
public Iterator<E> iterator()
```


[Back to member summary](#member-summary)

---

Generated from Ironwood source comments with **IronDocs**.
